Deployment/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - resources.thinkmay.net
    - signalling.thinkmay.net
    - slavemanager.thinkmay.net
    - conductor.thinkmay.net
    - thinkmay.net
    secretName: secret-tls
  rules:
  - host: conductor.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conductor
            port:
              number: 80

  #
  - host: resources.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resources
            port:
              number: 80

  #
  - host: signalling.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signalling
            port:
              number: 80


  - host: slavemanager.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slavemanager
            port:
              number: 80

  - host: document.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document
            port:
              number: 80

  - host: thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document
            port:
              number: 3000
